# nicestream

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  MANUAL.md  Makefile  README.md  demo.cpp  input_tests.cpp  manual.md  nicestream.cpp  nicestream.hpp  output_tests.cpp  test.cpp  test_cases.cpp
src/: nfa.cpp  nfa.hpp  nicein.cpp  nicein.hpp  niceout.hpp  nicestream.cpp  nicestream.hpp
test/: input_tests.cpp  output_tests.cpp
